[UNION] activities text overflowing fixed, text align on other activities set to left

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -187,6 +187,7 @@ h2 {
 	border-radius: 25px;
 	-webkit-border-radius: 25px;
 	-moz-border-radius: 25px;
+	text-align:left;
 }
 
 .joke {
@@ -241,7 +242,7 @@ h2 {
 
 .activity-button {
 	width: 110px;
-	height: 30px;
+	height: 60px;
 	padding-top: 110px;
 	background-size: 110px;
 	display: inline-block;
